A bunch of tiny changes

--- a/biblio.bib
+++ b/biblio.bib
@@ -1777,7 +1777,7 @@
 
 @article{kalyanpur2007finding,
   title   = {Finding all justifications of OWL DL entailments},
-  author  = {Kalyanpur, Aditya and Parsia, Bijan and Horridge, Matthew and Sirin, Evren},
+  author  = {Kalyanpur, Aditya and Parsia, Bijan and Horridge, Matthew and Sirin, Evren and others},
   journal = {ISWC/ASWC},
   volume  = {4825},
   pages   = {267--280},
@@ -1927,7 +1927,7 @@
 }
 
 @misc{owlapi,
-  author    = {Ignazio Palmisano and Simon Spero and Peter Ansell and Matthew Horridge and Stian Soiland-Reyes and Jim Balhoff and Nicolas Rouquette and Huseyin Kir and Lewis John McGibbney and others},
+  author    = {Ignazio Palmisano and Simon Spero and Peter Ansell and Matthew Horridge and Stian Soiland-Reyes and Jim Balhoff and Nicolas Rouquette and Huseyin Kir and Lewis John McGibbney et al.},
   title     = {OWLAPI},
   year      = {2023},
   publisher = {GitHub},
@@ -1937,7 +1937,7 @@
 }
 
 @misc{factpp,
-  author    = {Dmitry Tsarkov and others},
+  author    = {Dmitry Tsarkov et al.},
   title     = {FaCT++},
   year      = {2023},
   publisher = {Bitbucket},
@@ -2058,7 +2058,7 @@
 }
 
 @misc{protege5devdocs,
-  author  = {Protégé developers and others},
+  author  = {Protégé developers et al.},
   title   = {Protege 5 Developer Documentation},
   url     = {https://protegewiki.stanford.edu/wiki/Protege5DevDocs},
   urldate = {2023-05-14}
