--- a/sections/b.main/3.theory.tex
+++ b/sections/b.main/3.theory.tex
@@ -1,5 +1,5 @@
 
-It follows an explanation and definition on how this idea of axiom weakening can be extended also to more expressive DLs. Concretely, an extension of the refinement operators and axiom weakening operator will be proposed that can be used with \SROIQ ontologies.
+It follows an explanation and definition of how this idea of axiom weakening can also be extended to more expressive DLs. Concretely, an extension of the refinement operators and axiom weakening operator will be proposed that can be used with \SROIQ ontologies.
 
 \section{Difficulties with Weakening \SROIQ} \label{expressivity-problems}
 
