--- a/sections/b.main/3.theory/3.weakening.tex
+++ b/sections/b.main/3.theory/3.weakening.tex
@@ -1,5 +1,5 @@
 
-It follows now the extended definitions for the cover sets, refinement operators, and axiom weakening operator to \SROIQ concepts and axioms. This work builds on the approaches presented in \cite{confalonieri2020towards} and introduces further the weakening of RIAs as well a separation between $\Omcref$ and $\Omcfull$. We begin by defining the upward and downward cover sets. These are now defined for both concepts and roles. The set of subconcepts is taken from $\Omcfull$ as opposed to $\Omcref$, as it is likely to contain more subconcepts, thus improving the granularity of the cover sets. Further, the cover sets for roles are computed over the set of simple roles in $\Omcfull$. Additionally, we define the upward and downward cover also for non-negative integers, as they will be useful for the refinement of cardinality constraints.
+It follows now the extended definitions for the cover sets, refinement operators, and axiom weakening operator to \SROIQ concepts and axioms. This work builds on the approaches presented in \cite{confalonieri2020towards} and introduces further the weakening of RIAs as well as a separation between $\Omcref$ and $\Omcfull$. We begin by defining the upward and downward cover sets. These are now defined for both concepts and roles. The set of subconcepts is taken from $\Omcfull$ as opposed to $\Omcref$, as it is likely to contain more subconcepts, thus improving the granularity of the cover sets. Further, the cover sets for roles are computed over the set of simple roles in $\Omcfull$. Additionally, we define the upward and downward cover also for non-negative integers, as they will be useful for the refinement of cardinality constraints.
 
 \begin{definition} \label{def:covers}
   Let $\Omcfull$ and $\Omcref \subseteq \Omcfull$ be two \SROIQ ontologies that share the same vocabulary $N_C$, $N_R$, and $N_I$. The \emph{upward cover} and \emph{downward cover} for a concept $C$ are given by
@@ -29,9 +29,9 @@ It follows now the extended definitions for the cover sets, refinement operators
   \end{align*}
 \end{definition}
 
-As has already been observer in \cref{ex:up-cover-alc}, on their own, the upward and downward covers of concepts are missing some interesting refinements. Since they operate only over the subconcepts of $\Omcfull$, some rather obvious refinements, like for example removing conjuncts, will often be missed.
+As has already been observed in \cref{ex:up-cover-alc}, on their own, the upward and downward covers of concepts are missing some interesting refinements. Since they operate only over the subconcepts of $\Omcfull$, some rather obvious refinements, like for example removing conjuncts, will often be missed.
 \begin{example} \label{exa:up-cover}
-  Let $N_C = \{A, B, C\}$, $N_R = \{ r, s \}$, and $\Omc = \{A \sqsubseteq B, r \sqsubseteq s\}$. $\sub(\Omc) = \{\top, \bot, A, B\}$. The upward cover of $C \sqcup A$ is equal to $\UpC_{\Omc,\Omc}(C \sqcup A) = \{ \top \}$. The potentiality refinement to $C \sqcup B$ will be missed by all upward and downward covers, because $C \sqcup B \not\in \sub(\Omc)$. Further, $\UpC_{\Omc,\Omc}(\forall r.A) = \{ \top \}$, even if $\forall r.B$ and $\forall s.A$ are both possible generalizations.
+  Let $N_C = \{A, B, C\}$, $N_R = \{ r, s \}$, and $\Omc = \{A \sqsubseteq B, r \sqsubseteq s\}$. $\sub(\Omc) = \{\top, \bot, A, B\}$. The upward cover of $C \sqcup A$ is equal to $\UpC_{\Omc,\Omc}(C \sqcup A) = \{ \top \}$. The potential refinement to $C \sqcup B$ will be missed by all upward and downward covers because $C \sqcup B \not\in \sub(\Omc)$. Further, $\UpC_{\Omc,\Omc}(\forall r.A) = \{ \top \}$, even if $\forall r.B$ and $\forall s.A$ are both possible generalizations.
 \end{example}
 
 To also address some of these omissions, we define generalization and specialization operators that exploit the recursive structure of the concept being refined to generate more complex refinements. For convenience, we also define these operators for roles, even though their refinement operators are fully equivalent to the upward and downward cover functions.
@@ -84,10 +84,10 @@ Revisiting the case in \Cref{exa:up-cover} we observe that $\gamma_{\Omc,\Omc}(C
 
 \begin{proof}
   \item \ref{lem:finiteness}.\enspace \textbf{finiteness:\enspace}
-  The upward and downward cover sets for concepts, roles, and integers are always finite. The number of roles is finite, because the set of role names is finite. Since refinement of roles is equivalent to applying the upward or downward covers, the set of refinements must equally be finite. Similarly, the covers over concepts are limited to subconcepts, and since ontologies are finite sets of axioms, and all axioms have a finite size, there must be a finite number of subconcepts. We can show, by structural induction on concept expressions, that the result of the refinement operators must be a finite set for all concepts. This follows directly from the fact that the result is always the union of a constant number of finite sets.
+  The upward and downward cover sets for concepts, roles, and integers are always finite. The number of roles is finite because the set of role names is finite. Since refinement of roles is equivalent to applying the upward or downward covers, the set of refinements must equally be finite. Similarly, the covers over concepts are limited to subconcepts, and since ontologies are finite sets of axioms, and all axioms have a finite size, there must be a finite number of subconcepts. We can show, by structural induction on concept expressions, that the result of the refinement operators must be a finite set for all concepts. This follows directly from the fact that the result is always the union of a constant number of finite sets.
 
   \item \ref{lem:generalisation}.\enspace \textbf{generalization and specialization:\enspace}
-  We first observe that by definition, if $X \in \UpC_{\Omcref,\Omcfull}(Y)$ then $Y \sqsubseteq_\Omcref X$ must hold. Likewise, it follows from the definition that if $X \in \DownC_{\Omcref,\Omcfull}(X)$ then $X \sqsubseteq_\Omcref Y$. For an integer $n$, the upward cover contains only values greater or equal to $n$, while the downward cover contains only values less or equal $n$. We proceed with a proof by structural induction. We will show the proof for the generalization operator, the proof for the specialization operator can be approached analogously.
+  We first observe that by definition, if $X \in \UpC_{\Omcref,\Omcfull}(Y)$ then $Y \sqsubseteq_\Omcref X$ must hold. Likewise, it follows from the definition that if $X \in \DownC_{\Omcref,\Omcfull}(X)$ then $X \sqsubseteq_\Omcref Y$. For an integer $n$, the upward cover contains only values greater or equal to $n$, while the downward cover contains only values less or equal to $n$. We proceed with a proof by structural induction. We will show the proof for the generalization operator, the proof for the specialization operator can be approached analogously.
   \begin{itemize}
     \item For $Y \in N_C \cup \Lmc(N_R) \cup \{ \nominal a \mid a \in N_I \} \cup \{ \top, \bot \}$ the generalization operator is equivalent to a simple application of the upwards cover and $Y \sqsubseteq_\Omcref X$ holds.
     \item For $Y = \lnot C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\lnot C)^I$ that $\delta \not\in C^I$. By our inductive hypothesis, we know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$. It follows that $\delta \not\in C'^I$ and therefore $\delta \in (\lnot C')^I$. We conclude that $(\lnot C)^I \subseteq (\lnot C')^I$ in every model $I$ of $\Omcref$ and consequently $\lnot C \sqsubseteq_\Omcref \lnot C'$.
@@ -149,25 +149,25 @@ Clearly, replacing an axiom in the full ontology with a weakening cannot reduce 
 \end{lemma}
 
 \begin{proof}(\emph{Sketch})
-  For the addition to change the simplicity of any role, it must be that $\alpha'$ is a RIA that has some role $R$ as the super role and is either complex, or for which the sub role is non-simple. Assume, by contradiction, that $R$ is a simple role in $\Omc$ and non-simple in $\Omc \cup \{ \alpha' \}$. Since $R$ is simple in $\Omc$ it is not the universal, does not appear as the super role in any complex RIA of $\Omc$, and neither on the right-hand side of a simple RIA in $\Omc$ where the sub role is non-simple. If $\alpha'$ is a complex RIA then, by definition of the weakening operator, $\alpha$ must be a complex RIA and $R$ must also be the super role in $\alpha$, making it non-simple in $\Omc$, which contradicts our assumption. Similarly, if $\alpha'$ is a simple RIA with a non-simple role as the sub role, the sub role of $\alpha$ must be equal to that of $\alpha'$ because the refinement operators return only roles simple in $\Omcfull$, and those are also simple in $\Omc$. Further, since the super role of a RIA is only refined if the sub role is simple, $\alpha' = \alpha$, which means that $R$ is non-simple in $\Omc$, which contradicts the assumptions. It follows that such a role $R$ does not exist.
+  For the addition to change the simplicity of any role, it must be that $\alpha'$ is a RIA that has some role $R$ as the super role and is either complex or for which the sub role is non-simple. Assume, by contradiction, that $R$ is a simple role in $\Omc$ and non-simple in $\Omc \cup \{ \alpha' \}$. Since $R$ is simple in $\Omc$ it is not the universal role, does not appear as the super role in any complex RIA of $\Omc$, and neither on the right-hand side of a simple RIA in $\Omc$ where the sub role is non-simple. If $\alpha'$ is a complex RIA then, by definition of the weakening operator, $\alpha$ must be a complex RIA and $R$ must also be the super role in $\alpha$, making it non-simple in $\Omc$, which contradicts our assumption. Similarly, if $\alpha'$ is a simple RIA with a non-simple role as the sub role, the sub role of $\alpha$ must be equal to that of $\alpha'$ because the refinement operators return only roles simple in $\Omcfull$, and those are also simple in $\Omc$. Further, since the super role of a RIA is only refined if the sub role is simple, $\alpha' = \alpha$, which means that $R$ is non-simple in $\Omc$, which contradicts the assumptions. It follows that such a role $R$ does not exist.
 \end{proof}
 
-Note that removal of axioms will never cause a role that was previously simple to become non-simple. Hence, all roles simple in $\Omc$ are also simple in $\Omc \setminus \{ \alpha \} \cup\{ \alpha' \}$. Further, it should be noted that repeated replacement of axioms with weakened axioms keeps simple roles simple. This is an important observation, since repeated weakening is required for the proposed ontology repair algorithms using axiom weakening.
+Note that removal of axioms will never cause a role that was previously simple to become non-simple. Hence, all roles simple in $\Omc$ are also simple in $\Omc \setminus \{ \alpha \} \cup\{ \alpha' \}$. Further, it should be noted that repeated replacement of axioms with weakened axioms keeps simple roles simple. This is an important observation since repeated weakening is required for the proposed ontology repair algorithms using axiom weakening.
 
 \begin{lemma} \label{lem:regularity}
   Let $\Omc$ be an ontology such that all simple roles of $\Omcfull$ are also simple in $\Omc$. For every axiom $\alpha \in \Omc$, if $\alpha' \in g_{\Omcref,\Omcfull}(\alpha)$ and the RBox of $\Omc$ is regular, then the RBox of $\Omc \cup \{ \alpha' \}$ is also regular.
 \end{lemma}
 
 \begin{proof}(\emph{Sketch}) \phantomsection\label{proof:regularity}
-  Let us first argue that if there exists a preorder that satisfies the constraints necessary for checking regularity, then there exists $\preceq$ such that $S_1 \preceq S_2$, $S \preceq R$ and $R \not\preceq S$ for all simple roles $S, S_1, S_2$ and non-simple roles $R$. Firstly, $S_1 \not\preceq S_2$ and $S \not\preceq R$ cannot be required, because absence of a tuple is only required for complex RIAs, where the super role must not be a predecessor of the roles on the left-hand side. Since $S_1$ and $S$ are simple, they do not appear as the super role in a complex RIA. Similarly, $R \preceq S$ cannot be required. Since $S$ is simple and $R$ non-simple, it cannot be required directly through an axiom of the form $R \sqsubseteq S$. By induction, it cannot be required through transitivity, since $R \preceq T$ and $T \preceq S$ would have to be required. If $T$ is simple, $R \preceq T$ cannot be required, and if $T$ is non-simple, $T \preceq S$ cannot be required.
+  Let us first argue that if there exists a preorder that satisfies the constraints necessary for checking regularity, then there exists $\preceq$ such that $S_1 \preceq S_2$, $S \preceq R$ and $R \not\preceq S$ for all simple roles $S, S_1, S_2$ and non-simple roles $R$. Firstly, $S_1 \not\preceq S_2$ and $S \not\preceq R$ cannot be required, because the absence of a tuple is only required for complex RIAs, where the super role must not be a predecessor of the roles on the left-hand side. Since $S_1$ and $S$ are simple, they do not appear as the super role in a complex RIA. Similarly, $R \preceq S$ cannot be required. Since $S$ is simple and $R$ non-simple, it cannot be required directly through an axiom of the form $R \sqsubseteq S$. By induction, it cannot be required through transitivity, since $R \preceq T$ and $T \preceq S$ would have to be required. If $T$ is simple, $R \preceq T$ cannot be required, and if $T$ is non-simple, $T \preceq S$ cannot be required.
 
-  Since $\Omc$ has a regular RBox, there exists such a $\preceq$ for $\Omc$. We will show that $\preceq$ is also a witness for regularity of $\Omc \cup \{ \alpha' \}$. All RIA in $\Omc$ are of one of the allowed forms for $\preceq$. It is therefore sufficient to verify that $\alpha'$ has one of the allowed forms.
+  Since $\Omc$ has a regular RBox, there exists such a $\preceq$ for $\Omc$. We will show that $\preceq$ is also a witness for regularity of $\Omc \cup \{ \alpha' \}$. All RIAs in $\Omc$ are of one of the allowed forms for $\preceq$. It is therefore sufficient to verify that $\alpha'$ has one of the allowed forms.
   If $\alpha' = \alpha$ or $\alpha'$ is not a RIA, it does not affect the regularity.
   Otherwise, if $\alpha'$ is a simple RIA $S \sqsubseteq R$, then by definition of the weakening operator, $S$ is simple in $\Omcfull$, and therefore also in $\Omc$. Given that $S$ is simple, $S \preceq R$ holds for simple and non-simple $R$ by our choice of $\preceq$.
   If $\alpha'$ is a complex RIA $S_1' \circ \cdots \circ S_n' \sqsubseteq R$, then $\alpha$ is also a complex RIA $S_1 \circ \cdots \circ S_n \sqsubseteq R$ and $R$ is non-simple in $\Omc$. If $S_i \preceq R$ and $S_i \not\preceq R$, then so will $S_i' \preceq R$ and $R \not\preceq S_i'$, either because $S_i = S_i'$ or because $S_i'$ is simple and $R$ is non-simple. Since $\Omc$ has a regular RBox, the only case in which $R \preceq S_i$ is if $S_i = R$. In this case, $S_i' \preceq R$ and $R \not\preceq S_i'$ will still hold if $S_i \not= R$. If $S_i = R$, either $i = 0$ or $i = n$ which is allowed. The only delicate case is if $\alpha = R \circ R \sqsubseteq R$, which will result in either $\alpha' = S_1' \circ R \sqsubseteq R$ or $R \circ S_2' \sqsubseteq R$, both of which are valid.
 \end{proof}
 
-Like for the invariant on simple roles, also regularity is maintained by repeated replacement of axioms with weakenings. With the help of \cref{lem:simple-roles} and \cref{lem:regularity} we can now sketch a proof showing that adding weakened axioms to a \SROIQ ontology will yield another valid \SROIQ ontology.
+As for the invariant on simple roles, also regularity is maintained by repeated replacement of axioms with weakenings. With the help of \cref{lem:simple-roles} and \cref{lem:regularity} we can now sketch a proof showing that adding weakened axioms to a \SROIQ ontology will yield another valid \SROIQ ontology.
 
 \begin{theorem} \label{lem:global-constraints}
   Given that $\Omcref$ and $\Omcfull$ are valid \SROIQ ontologies. For every axiom $\alpha \in \Omcfull$, if $\alpha' \in g_{\Omcref,\Omcfull}(\alpha)$, then $\Omcfull \cup \{ \alpha' \}$ is a valid \SROIQ ontology.
@@ -175,5 +175,5 @@ Like for the invariant on simple roles, also regularity is maintained by repeate
 
 \begin{proof}(\emph{Sketch})
   It has been established already in \cref{lem:regularity}, that the regularity of the RBox will be preserved.
-  It is guaranteed by \cref{lem:simple-roles} that all roles that were simple before addition, are still simple afterwards. Therefore, all usages of roles in axioms and concepts that were not touched by the refinement do not pose a problem. The condition static that the upward and downward cover of a role contain only roles that are simple in $\Omcfull$ (and therefore by \cref{lem:simple-roles} also in $\Omcfull \cup \{ \alpha' \}$) forces that every refinement of a role is simple. This restriction to simple roles guarantees that no non-simple role may be used in disjoint role axioms, or the scope of cardinality and self constraints.
+  It is guaranteed by \cref{lem:simple-roles} that all roles that were simple before addition, are still simple afterwards. Therefore, all usages of roles in axioms and concepts that were not touched by the refinement do not pose a problem. The condition that the upward and downward covers of a role contain only roles that are simple in $\Omcfull$ (and therefore by \cref{lem:simple-roles} also in $\Omcfull \cup \{ \alpha' \}$) forces that every refinement of a role is simple. This restriction to simple roles guarantees that no non-simple role may be used in disjoint role axioms or the scope of cardinality and self constraints.
 \end{proof}
