--- a/sections/b.main/5.evaluation.tex
+++ b/sections/b.main/5.evaluation.tex
@@ -1,5 +1,5 @@
 
-The evaluation of the proposed refinement and axiom weakening operator has been carried out using the implementation described in \cref{prototype} using different ontologies from BioPortal \cite{whetzel2011bioportal,bioportal}. Additionally, the pizza ontology \cite{pizzaontology} was included in the testing. The chosen ontologies are of different sizes and use a varying amount of expressive features. Some characteristics of the used ontologies are shown in \cref{table:ontologies}. On average, they contain about 289 axioms, 73 concept names, 29 role names, and 168 subconcepts. Some additional evaluation results, that did not fit into this chapter, can be found in \cref{eval-appendix}.
+The evaluation of the proposed refinement and axiom weakening operator has been carried out using the implementation described in \cref{prototype} using different ontologies from BioPortal \cite{whetzel2011bioportal,bioportal}. Additionally, the pizza ontology \cite{pizzaontology} was included in the testing. The chosen ontologies are of different sizes and use a varying amount of expressive features. Some characteristics of the used ontologies are shown in \cref{table:ontologies}. On average, they contain about 289 axioms, 73 concept names, 29 role names, and 168 subconcepts. Some additional evaluation results that did not fit into this chapter can be found in \cref{eval-appendix}.
 
 \begin{table}[ht]
   \scriptsize
@@ -37,7 +37,7 @@ The evaluation of the proposed refinement and axiom weakening operator has been 
   \label{table:ontologies}
 \end{table}
 
-Since the ontologies use OWL 2, the axioms and concepts do not map directly to \SROIQ. It is possible to directly apply axiom weakening to OWL 2 DL ontologies, a description of such a scheme and why it might be useful can be found in \cref{weakening-owl-2-dl}. However, in order to follow the definitions laid out in \cref{weakening-sroiq}, the OWL 2 DL axioms have been mapped to \SROIQ axioms. A detailed description of the mapping between OWL 2 DL and \SROIQ used for this evaluation can be found in \cref{owl-to-sroiq}. While some axioms have a direct mapping, others have been replaced by a set of axioms that together are equivalent. During the preprocessing, we further removed annotation axioms and axioms related to data properties and any axiom that caused any OWL 2 DL profile violation, as our weakening operator does not handle them.
+Since the ontologies use OWL 2, the axioms and concepts do not map directly to \SROIQ. It is possible to directly apply axiom weakening to OWL 2 DL ontologies, a description of such a scheme and why it might be beneficial can be found in \cref{weakening-owl-2-dl}. However, to follow the definitions laid out in \cref{weakening-sroiq}, the OWL 2 DL axioms have been mapped to \SROIQ axioms. A detailed description of the mapping between OWL 2 DL and \SROIQ used for this evaluation can be found in \cref{owl-to-sroiq}. While some axioms have a direct mapping, others have been replaced by a set of axioms that together are equivalent. During the preprocessing, we further removed annotation axioms and axioms related to data properties and any axiom that caused any OWL 2 DL profile violation, as our weakening operator does not handle them.
 
 Claims about runtime should generally only be used for relative comparisons and rough estimates. While they will obviously vary greatly based on hardware choices, all evaluations here have been performed on an Intel Coffee Lake system running at around 4GHz for the duration of the experiment. Unless otherwise indicated, the FaCT++ reasoner \cite{tsarkov2006fact++,factpp} was used for evaluation.
 
