--- a/sections/b.main/5.evaluation/2.cache.tex
+++ b/sections/b.main/5.evaluation/2.cache.tex
@@ -1,7 +1,7 @@
 
 As discussed in \cref{cache-impl}, to accelerate the computation of upward and downward covers, a cache was implemented to avoid repeated calls to the reasoner, when the necessary information can already be inferred from previous computations. This section will discuss the experiments performed to evaluate the effectiveness of the cache implementation.
 
-Three versions of the upward and downward cover have been considered, the uncached version that calls the reasoner for every subsumption query, a version that caches only the exact queries that were already made previously, and finally the version that additionally infers some additional information from the transitivity of subsumption as listed in \cref{algo:cached-subs}. The experiment uses some of the same ontologies as have been used for the previously discussed evaluation into the repair quality. From the logical axioms of each ontology were selected uniformly at random, one hundred groups with a fixed number of axioms. The same axioms may be selected multiple times. Each of the groups was then tested with a separate instance of the cache. The rationale behind testing with different group sizes is that the cache will obviously have a greater impact when the same cache can be reused for more cover computations. In each test run, the axioms weakening operator was applied to each axiom and the number of reasoner calls and (real) time taken were measured. The weakening operator used the complete (after post-processing) ontology as the reference ontology. The test has further been performed using different OWL 2 DL reasoners. The final results of the evaluation can be seen in table \cref{table:results-cache-calls} and are visualized in figure \cref{fig:results-cache-calls}. Note that a logarithmic y-axis has been used in the bar plots.
+Three versions of the upward and downward cover have been considered, the uncached version that calls the reasoner for every subsumption query, a version that caches only the exact queries that were already made previously, and finally the version that additionally infers some additional information from the transitivity of subsumption as listed in \cref{algo:cached-subs}. The experiment uses some of the same ontologies as have been used for the previously discussed evaluation of the repair quality. From the logical axioms of each ontology were selected, uniformly at random, one hundred groups with a fixed number of axioms. The same axioms may be selected multiple times. Each of the groups was then tested with a separate instance of the cache. The rationale behind testing with different group sizes is that the cache will obviously have a greater impact when the same cache can be reused for more cover computations. In each test run, the axiom weakening operator was applied to each axiom and the number of reasoner calls and (real) time taken were measured. The weakening operator used the complete (after post-processing) ontology as the reference ontology. The test has further been performed using different OWL 2 DL reasoners. The final results of the evaluation can be seen in table \cref{table:results-cache-calls} and are visualized in figure \cref{fig:results-cache-calls}. Note that a logarithmic y-axis has been used in the bar plots.
 
 \begin{table}[ht]
   \scriptsize
@@ -46,7 +46,7 @@ Three versions of the upward and downward cover have been considered, the uncach
 \begin{figure}[ht]
   \centering
   \includegraphics[width=\textwidth]{resources/calls-cache-bar.png}
-  \caption{Mean number of reasoner calls needed for a single application of the axiom weakening operator averaged over the tested ontologies.}
+  \caption{The mean number of reasoner calls needed for a single application of the axiom weakening operator, averaged over the tested ontologies.}
   \label{fig:results-cache-calls}
 \end{figure}
 
@@ -57,5 +57,5 @@ Three versions of the upward and downward cover have been considered, the uncach
   \label{fig:results-cache-time}
 \end{figure}
 
-We can see clearly from the results that the cache is indeed effective at lowering both the number of reasoner calls and execution time. The simple caching method alone provides a dramatic decrease in the number of reasoner calls, especially at higher group sizes. The algorithm that can additionally exploit the transitivity of the relation performs even better, also with a smaller number of weakening steps. The difference when looking at the execution time is significantly smaller. This can likely be attributed largely to internal caching performed by the reasoners. This would also explain the observed variation when it comes to the relative improvement between different reasoners. It can be concluded that the addition of the cache greatly benefits computation of the axiom weakening operator, especially if it can be reused for many applications of the same weakening operator.
+We can see clearly from the results that the cache is indeed effective at lowering both the number of reasoner calls and execution time. The simple caching method alone provides a dramatic decrease in the number of reasoner calls, especially at higher group sizes. The algorithm that can additionally exploit the transitivity of the relation performs even better, also with a smaller number of weakening steps. The difference when looking at the execution time is significantly smaller. This can likely be attributed largely to internal caching performed by the reasoners. This would also explain the observed variation when it comes to the relative improvement between different reasoners. It can be concluded that the addition of the cache greatly benefits the computation of the axiom weakening operator, especially if it can be reused for many applications of the same weakening operator.
 
