--- a/sections/c.back/a.sroiq/2.sroiq-sem.tex
+++ b/sections/c.back/a.sroiq/2.sroiq-sem.tex
@@ -1,6 +1,6 @@
 \subsection{Interpretations} \label{interpretations}
 
-The semantics of $\SROIQ$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion in that of the interpretations. And \emph{interpretation} $I = \langle \Delta^I, \cdot^I \rangle$ consists of a set $\Delta^I$ called the \emph{domain} of $I$, and an \emph{interpretation function} $\cdot^I$. The interpretation function maps the vocabulary elements as follows:
+The semantics of $\SROIQ$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion is that of the interpretation. And \emph{interpretation} $I = \langle \Delta^I, \cdot^I \rangle$ consists of a set $\Delta^I$ called the \emph{domain} of $I$, and an \emph{interpretation function} $\cdot^I$. The interpretation function maps the vocabulary elements as follows:
 \begin{itemize}
   \item for each individual name $a \in N_I$ to an element $a^I \in \Delta^I$ in the domain,
   \item for each concept name $C \in N_C$ to a subset $C^I \subseteq \Delta^I$ of the domain, and
@@ -37,18 +37,18 @@ An interpretation maps the universal role $U$ to $U^I = \Delta^I \times \Delta^I
 
 \subsection{Satisfaction of Axioms} \label{satisfaction-of-axioms}
 
-The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $I$. If this is the case, the interpretation $I$ satisfies $\alpha$, written $I \models \alpha$. If an interpretation $I$ satisfies an axiom $\alpha$, we also say that $I$ is a model of $\alpha$.
+The purpose of the (extended) interpretation function is mainly to determine the satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $I$. If this is the case, the interpretation $I$ satisfies $\alpha$, written $I \models \alpha$. If an interpretation $I$ satisfies an axiom $\alpha$, we also say that $I$ is a model of $\alpha$.
 \begin{itemize}
   \item A RIA $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $I$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^I$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^I$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $I \models S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^I \circ \cdots \circ S_n^I \subseteq R^I$ where $\circ$ denotes the composition of the relations.
-  \item A role disjointness axiom $\disjoint(S, R)$ hold iff the extensions of $R$ and $S$ are disjoint, formally $I \models \disjoint(S, R) \iff S^I \cap R^I = \empty$.
-  \item A GCI $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $I \models C \sqsubseteq D \iff C^I \subseteq D^I$.
-  \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^I$ is in the concept extension of $C$, therefore $I \models C (a) \iff a^I \in C^I$.
-  \item A role assertion $R(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $I \models R(a, b) \iff \langle a^I, b^I \rangle \in R^I$.
+  \item A role disjointness axiom $\disjoint(S, R)$ hold if and only if the extensions of $R$ and $S$ are disjoint, formally $I \models \disjoint(S, R) \iff S^I \cap R^I = \empty$.
+  \item A GCI $C \sqsubseteq D$ is true if and only if the extension of $C$ is fully contained in the extension of $D$, hence $I \models C \sqsubseteq D \iff C^I \subseteq D^I$.
+  \item A concept assertion $C(a)$ holds if and only if the individual that $a$ is mapped to by $\cdot^I$ is in the concept extension of $C$, therefore $I \models C (a) \iff a^I \in C^I$.
+  \item A role assertion $R(a, b)$ holds if and only if the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $I \models R(a, b) \iff \langle a^I, b^I \rangle \in R^I$.
   \item A negative role assertion $\lnot R(a, b)$ is true exactly then when the corresponding role assertion $R(a, b)$ is false. Equivalently, $I \models \lnot R(a, b) \iff \langle a^I, b^I \rangle \not\in R^I$.
-  \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $I \models a = b \iff a^I = b^I$.
-  \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $I \models a \not= b \iff a^I \not= b^I$.
+  \item An equality assertion $a = b$ holds if and only if the individuals identified by $a$ and $b$ are the same element of the domain, formally written $I \models a = b \iff a^I = b^I$.
+  \item Dual to the above, $a \not = b$ holds if and only if the names $a$ and $b$ denote different elements, accordingly $I \models a \not= b \iff a^I \not= b^I$.
 \end{itemize}
-We say a set of axioms holds in an interpretation $I$ iff every axiom of the set hold in $I$. Accordingly, $I$ satisfies a ontology $\Omc$, written $I \models \Omc$, iff $I$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $I \models \Omc \iff \forall \alpha \in \Omc \, . \; I \models \alpha$. If $I$ satisfies $\Omc$, we say $I$ is a model of $\Omc$.
+We say a set of axioms holds in an interpretation $I$ if and only if every axiom of the set hold in $I$. Accordingly, $I$ satisfies a ontology $\Omc$, written $I \models \Omc$, if and only if $I$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $I \models \Omc \iff \forall \alpha \in \Omc \, . \; I \models \alpha$. If $I$ satisfies $\Omc$, we say $I$ is a model of $\Omc$.
 
 \begin{example}
   Given the interpretation $I = \langle \Delta^I, \cdot^I \rangle$ where $\Delta^I = \{ 1, 2, 3, 4, 5, 6, 7 \}$ and $P^I = \{ 2, 3, 5, 7 \}$, $E^I = \{ 2, 4, 6 \}$, $o^I = 1$, $t^I = 2$, and $s^I = \{ \langle 1, 2 \rangle,\allowbreak \langle 2, 3 \rangle,\allowbreak \langle 3, 4 \rangle,\allowbreak \langle 4, 5 \rangle,\allowbreak \langle 5, 6 \rangle,\allowbreak \langle 6, 7 \rangle \}$, the following axioms are satisfied by $I$.
@@ -76,17 +76,17 @@ We say a set of axioms holds in an interpretation $I$ iff every axiom of the set
 
 \subsection{Reasoning tasks} \label{reasoning-tasks}
 
-In general, logic-based knowledge representation is useful for the ability to perform reasoning task on ontologies. There are a number of reasoning tasks that can be performed by a reasoner in DLs. In this section, we will have a look at three basic reasoning tasks, and how they can be reduced to each other. While there exists other reasoning task, this section will focus on \emph{ontology consistency}, \emph{axiom entailment}, and \emph{concept satisfiability}.
+In general, logic-based knowledge representation is useful for the ability to perform reasoning tasks on ontologies. Several reasoning tasks can be performed by a reasoner in DLs. In this section, we will have a look at three basic reasoning tasks, and how they can be reduced to each other. While there exist other reasoning tasks, this section will focus on \emph{ontology consistency}, \emph{axiom entailment}, and \emph{concept satisfiability}.
 
 \subsubsection{Ontology consistency} \label{knowledge-base-satisfiability}
 
-An ontology $\Omc$ is consistent iff there exists a model $I \models \Omc$ for $\Omc$. Otherwise, the ontology is called inconsistent. As discussed in \cref{ontology-bugs}, an inconsistent ontology can be a sign of modelling errors. An inconsistent ontology entailed every statement, and as such all information extracted from it is useless. Therefore, an inconsistent ontology is generally undesirable. Furthermore, both the task of deciding concept satisfiability and axiom entailment can be reduced to deciding ontology consistency.
+An ontology $\Omc$ is consistent if and only if there exists a model $I \models \Omc$ for $\Omc$. Otherwise, the ontology is called inconsistent. As discussed in \cref{ontology-bugs}, an inconsistent ontology can be a sign of modelling errors. An inconsistent ontology entailed every statement, and as such all information extracted from it is useless. Therefore, an inconsistent ontology is generally undesirable. Furthermore, both the task of deciding concept satisfiability and axiom entailment can be reduced to deciding ontology consistency.
 
 \subsubsection{Axiom entailment} \label{axiom-entailment}
 
-An axiom $\alpha$ is entailed by $\Omc$ if every model $I \models \Omc$ of the ontology also satisfies the axiom $I \models \alpha$. We also write this as $\Omc \models \alpha$ and say that $\alpha$ is a consequence of $\Omc$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty ontology, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\Omc$ if the set of all axioms which are entailed by $\Omc$, we write $\op{Con}(\Omc) = \{ \alpha \mid \Omc \models \alpha \}.$ It is clear that the set of consequences will always be infinite, since there is an infinite number of tautologies.
+An axiom $\alpha$ is entailed by $\Omc$ if every model $I \models \Omc$ of the ontology also satisfies the axiom $I \models \alpha$. We also write this as $\Omc \models \alpha$ and say that $\alpha$ is a consequence of $\Omc$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty ontology, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\Omc$ if the set of all axioms which are entailed by $\Omc$, we write $\op{Con}(\Omc) = \{ \alpha \mid \Omc \models \alpha \}.$ It is clear that the set of consequences will always be infinite since there is an infinite number of tautologies.
 
-The problem of axiom entailment can be reduced to determining for the satisfiability of a modified ontology. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $I \models \alpha \iff I \not\models \beta$. If $\alpha$ is entailed by $\Omc$, it must hold in every model of $\Omc$, hence $\beta$ must not hold in any model. It follows that the extended ontology $\Omc \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for satisfiability of a modified ontology, if we can find such an opposing axiom for $\alpha$. For some cases in $\SROIQ$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\SROIQ$ axiom.
+The problem of axiom entailment can be reduced to determining the satisfiability of a modified ontology. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $I \models \alpha \iff I \not\models \beta$. If $\alpha$ is entailed by $\Omc$, it must hold in every model of $\Omc$, hence $\beta$ must not hold in any model. It follows that the extended ontology $\Omc \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for the satisfiability of a modified ontology if we can find such an opposing axiom for $\alpha$. For some cases in $\SROIQ$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\SROIQ$ axiom.
 \begin{table}[ht]
   \centering
   \begin{tabular}{|l|l|}
@@ -104,11 +104,11 @@ The problem of axiom entailment can be reduced to determining for the satisfiabi
     \hline
   \end{tabular}
   \label{tab:entailment-reduction}
-  \caption[Axioms substitution for reducing entailment to satisfiability]{The axioms in $B$ together have the “opposite” meaning of those in $\alpha$. This means, checking entailment of $\alpha$ with respect to $\Omc$, is equivalent to checking unsatisfiability of $\Omc \cup B$. $a$, $a_i$, and $b$ are assumed to not appear in $\Omc$.}
+  \caption[Axioms substitution for reducing entailment to satisfiability]{The axioms in $B$ together have the “opposite” meaning of those in $\alpha$. This means, checking the entailment of $\alpha$ with respect to $\Omc$, is equivalent to checking the unsatisfiability of $\Omc \cup B$. $a$, $a_i$, and $b$ are assumed to not appear in $\Omc$.}
 \end{table}
 
 \subsubsection{Concept satisfiability} \label{concept-satisfiability}
 
-A concept $C$ is satisfiable with respect to $\Omc$ iff there exists a model of the ontology $I \models \Omc$ such that the extension of $C$ is not empty, i.e., $C^I \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
+A concept $C$ is satisfiable with respect to $\Omc$ if and only if there exists a model of the ontology $I \models \Omc$ such that the extension of $C$ is not empty, i.e., $C^I \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example, $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
 
-Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $I \models \Omc$ maps the concept to the empty set, that is $C^I = \empty$. Since the other direction is trivial, we can rewrite this as $C^I \subseteq \empty$. It follows that since $\bot^I = \empty$ the every such model satisfies $I \models C \sqsubseteq \bot$, meaning $\Omc \models C \sqsubseteq \bot$. We conclude that we can test for unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
+Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $I \models \Omc$ maps the concept to the empty set, that is $C^I = \empty$. Since the other direction is trivial, we can rewrite this as $C^I \subseteq \empty$. It follows that since $\bot^I = \empty$ every such model satisfies $I \models C \sqsubseteq \bot$, meaning $\Omc \models C \sqsubseteq \bot$. We conclude that we can test for the unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
