--- a/sections/a.front/acknowledgments.tex
+++ b/sections/a.front/acknowledgments.tex
@@ -1,5 +1,5 @@
 
-I would like to thank Oliver Kutz and Nicolas Troquard, for their invaluable guidance and support throughout the duration of this thesis. Their insightful suggestions and feedback have been instrumental in shaping the direction of this work. I am particularly grateful for their proposal of the topic and their assistance in producing a paper, which provided me with invaluable exposure to the research community.
+I would like to thank Oliver Kutz and Nicolas Troquard for their invaluable guidance and support throughout the creation of this thesis. Their insightful suggestions and feedback have been instrumental in shaping the direction of this work. I am particularly grateful for their proposal of the topic and their assistance in producing a paper, which provided me with invaluable exposure to the research community.
 
 I would also like to extend my appreciation to my fellow students. Their motivation and willingness to exchange ideas have enriched my experience and contributed to the development of this thesis.
 
