--- a/sections/b.main/2.background/5.weakening.tex
+++ b/sections/b.main/2.background/5.weakening.tex
@@ -1,7 +1,7 @@
 
 Axiom weakening, as discussed in this thesis, is based on the approach presented for weakening with \ALC ontologies in \cite{troquard2018repairing}. To provide the necessary context for the following discussion on how weakening may be performed in \SROIQ, we provide a brief overview of axiom weakening in the case of \ALC. For further details, see \cite{troquard2018repairing}.
 %
-We begin by giving the definition for subconcepts. We will immediately also extend the definition to \SROIQ concepts, since we will need it for later definitions of axiom weakening in \SROIQ.
+We begin by defining subconcepts. We will immediately also extend the definition to \SROIQ concepts, since we will need it for later definitions of axiom weakening in \SROIQ.
 
 \begin{definition}
   Let $\Omc$ be an \ALC or \SROIQ ontology. The set of \emph{subconcepts} of $\Omc$ is given by
@@ -70,13 +70,13 @@ To additionally capture these omissions, we define generalization and specializa
   \end{align*}
 \end{definition}
 
-If we again revisit the example in \cref{ex:up-cover-alc}, we can observe that $\gamma_\Omc(C \sqcup A) = \{ \top, \top \sqcup A, C \sqcup A, C \sqcup B \}$ does contain the possible refinement $C \sqcup B$. Similarly, $\gamma_\Omc(\forall r.A) = \{ \top, \forall r.A, \forall s.A, \forall r.B \}$ contains $\forall r.B$. Some basic properties of $\gamma_\Omc$ and $\rho_\Omc$ are shown in \cite{troquard2018repairing}. Most relevant of these is the fact that $\gamma_\Omc$ and $\rho_\Omc$ do in fact return, respectively, generalizations and specializations of the given concepts. Formally, for all concepts $C$ and $D$, if $D \in \gamma_\Omc(C)$ then $C \sqsubseteq_\Omc D$. Similarly, if $D \in \rho_\Omc$ then $D \sqsubseteq_\Omc C$. Another important property to take not of is that both concrete refinement operators only return finite sets of refinements.
+If we again revisit the example in \cref{ex:up-cover-alc}, we can observe that $\gamma_\Omc(C \sqcup A) = \{ \top, \top \sqcup A, C \sqcup A, C \sqcup B \}$ does contain the possible refinement $C \sqcup B$. Similarly, $\gamma_\Omc(\forall r.A) = \{ \top, \forall r.A, \forall s.A, \forall r.B \}$ contains $\forall r.B$. Some basic properties of $\gamma_\Omc$ and $\rho_\Omc$ are shown in \cite{troquard2018repairing}. Most relevant of these is the fact that $\gamma_\Omc$ and $\rho_\Omc$ do in fact return, respectively, generalizations and specializations of the given concepts. Formally, for all concepts $C$ and $D$, if $D \in \gamma_\Omc(C)$ then $C \sqsubseteq_\Omc D$. Similarly, if $D \in \rho_\Omc$ then $D \sqsubseteq_\Omc C$. Another important property to take note of is that both concrete refinement operators only return finite sets of refinements.
 
 % define the weakening operator
 We define now the \emph{axiom weakening operator} using these generalization and specialization operators.
 
 \begin{definition}
-  Given an axiom $\alpha$, the set of \emph{weakenings} with respect to the ontology $\Omc$, written $g_\Omc(\alpha)$ is defined such that
+  Given an axiom $\alpha$, the set of \emph{weakenings} with respect to the ontology $\Omc$, written $g_\Omc(\alpha)$, is defined such that
   \begin{align*}
     g_\Omc(C \sqsubseteq D) ={} & \{ C' \sqsubseteq D \mid C' \in \rho_\Omc (C) \} \\
     & \cup \{ C \sqsubseteq D' \mid D' \in \gamma_\Omc(D) \} \enspace, \\
@@ -90,9 +90,9 @@ The axioms in the set $g_\Omc(\alpha)$ are indeed weaker than $\alpha$ for every
   Let $N_C = \{ A, B, C \}$, $N_I = \{ a \}$ and $\Omc = \{ A \sqsubseteq B, A \sqsubseteq C \}$. $\sub(\Omc) = \{\top, \bot, A, B, C\}$. $\gamma_\Omc(A) = \{ A, B, C \}$ and $\rho_\Omc(B) = \{ B, A \}$. The weakenings of $B \sqsubseteq A$ with respect to $\Omc$ are therefore $g_\Omc(B \sqsubseteq A) = \{ B \sqsubseteq A, B \sqsubseteq B, B \sqsubseteq C, A \sqsubseteq A \}$. Similarly, $g_\Omc(A(a)) = \{ A(a), B(a), C(a) \}$.
 \end{example}
 
-In order to apply the weakening operator to the problem of repairing inconsistent ontologies, we follow the algorithm depicted in \cref{algo:repair-weaken-alc}. First, as mention above, the computation of a non-trivial upward and downward cover set is only possible when using a consistent ontology. We therefore need to first find a consistent subontology $\Omcref$ of $\Omc$ to serve as \emph{reference ontology}. One possibility outlined in \cite{troquard2018repairing} is to select a random maximal consistent subset of $\Omc$. Another option is to choose the intersection of some (or all) maximal consistent subsets of $\mathcal{O}$ (e.g., \cite{LLRRS10}). This latter option has the advantage of using only information for the weakening that is likely to be correct. On the other hand, it will lead to diminished upward and downward covers and therefore can reduce the number of possible weakenings.
+In order to apply the weakening operator to the problem of repairing inconsistent ontologies, we follow the algorithm depicted in \cref{algo:repair-weaken-alc}. First, as mentioned above, the computation of a non-trivial upward and downward cover set is only possible when using a consistent ontology. We, therefore, need to first find a consistent subontology $\Omcref$ of $\Omc$ to serve as \emph{reference ontology}. One possibility outlined in \cite{troquard2018repairing} is to select a random maximal consistent subset of $\Omc$. Another option is to choose the intersection of some (or all) maximal consistent subsets of $\mathcal{O}$ (e.g., \cite{LLRRS10}). This latter option has the advantage of using only information for the weakening that is likely to be correct. On the other hand, it will lead to diminished upward and downward covers and therefore can reduce the number of possible weakenings.
 
-Once a reference ontology has been chosen, and as long as $\Omc$ is inconsistent, we continue by selecting a ``bad'' axiom $\alpha$, remove it from $\Omc$, and replace it with a weaker axiom from $g_\Omcref(\alpha)$. Like for the choice of reference ontology, there are also multiple options for the selection of bad axioms. \cite{troquard2018repairing} proposes two different implementations. One based on choosing axioms at random, and another implementation that randomly samples a number of (or all the) minimal inconsistent subsets of axioms $J_1, J_2, \dots, J_k \subseteq \Omc$ and return one axiom in $\Omc$ from the ones occurring the most often. The weaker axiom is chosen from the set of weakening by selecting one uniformly at random. While there may be better heuristics for choosing the weakening, termination of the algorithm is not generally guaranteed. It has, however, been shown in \cite{confalonieri2020towards}, that when selecting among the weakening at random using a uniform distribution, their algorithm is almost surely going to terminate. It has yet to be shown whether this holds also for the variation presented in this paper. A similar effect of almost sure termination could also be achieved by maintaining a constant non-zero probability of removing the axiom at each step.
+Once a reference ontology has been chosen, and as long as $\Omc$ is inconsistent, we continue by selecting a ``bad'' axiom $\alpha$, remove it from $\Omc$, and replace it with a weaker axiom from $g_\Omcref(\alpha)$. As for the choice of reference ontology, there are also multiple options for the selection of bad axioms. \cite{troquard2018repairing} proposes two different implementations. One is based on choosing axioms at random, and another implementation randomly samples a number of (or all the) minimal inconsistent subsets of axioms $J_1, J_2, \dots, J_k \subseteq \Omc$ and returns one axiom in $\Omc$ from the ones occurring the most often. The weaker axiom is chosen from the set of weakening by selecting one uniformly at random. While there may be better heuristics for choosing the weakening, termination of the algorithm is not generally guaranteed. It has, however, been shown in \cite{confalonieri2020towards}, that when selecting among the weakening at random using a uniform distribution, their algorithm is almost surely going to terminate. It has yet to be shown whether this holds also for the variation presented in this paper. A similar effect of almost sure termination could also be achieved by maintaining a constant non-zero probability of removing the axiom at each step.
 
 \begin{algorithm}[ht]
   \begin{algorithmic}
