--- a/sections/c.back/e.plugin.tex
+++ b/sections/c.back/e.plugin.tex
@@ -3,7 +3,7 @@ This section will cover how to install and use the Protégé plugin developed to
 
 \section{Installation}
 
-The Protégé plugin can either be compiled and packaged from source, or is available at \url{https://github.com/rolandbernard/protege-weakening/releases}. If you desire to compile the plugin from source, you will need a Java 11 JDK and the Maven tool. If you have both of these, you can execute the following command to package the plugin, and thereafter, find the bundled JAR file in \inlinecode{target/protege-weakening-X.X.X.jar}.
+The Protégé plugin can either be compiled and packaged from source or is available at \url{https://github.com/rolandbernard/protege-weakening/releases}. If you desire to compile the plugin from source, you will need a Java 11 JDK and the Maven tool. If you have both of these, you can execute the following command to package the plugin, and thereafter, find the bundled JAR file in \inlinecode{target/protege-weakening-X.X.X.jar}.
 
 \begin{lstlisting}
 git clone https://github.com/rolandbernard/protege-weakening
@@ -11,7 +11,7 @@ cp protege-weakening
 mvn clean compile package
 \end{lstlisting}
 
-The JAR file of the plugin must be placed into the plugin folder of Protégé. The location of this folder will vary depending on the platform and configuration of Protégé. In a Linux based environment, for example, it will most likely be located in \inlinecode{\$HOME/.Protege/plugins/}. After copying the JAR file of the plugin into this folder, the plugin will automatically be loaded and initialized the next time Protégé is started. Note that the plugin will require at least Java 11 and Protégé version 5.6.1. The plugin may work for some older Protégé versions, but this has not been tested.
+The JAR file of the plugin must be placed into the plugin folder of Protégé. The location of this folder will vary depending on the platform and configuration of Protégé. In a Linux-based environment, for example, it will most likely be located in \inlinecode{\$HOME/.Protege/plugins/}. After copying the JAR file of the plugin into this folder, the plugin will automatically be loaded and initialized the next time Protégé is started. Note that the plugin will require at least Java 11 and Protégé version 5.6.1. The plugin may work for some older Protégé versions, but this has not been tested.
 
 \section{Using the Menu}
 
@@ -23,7 +23,7 @@ The JAR file of the plugin must be placed into the plugin folder of Protégé. T
 
 The easiest way to use the plugin is by using the added menu items in the ``Tools'' section of the top menu. There are three main menu items. The ``Normalize to SROIQ'' entry will execute the normalization of the ontology that has also been used for the evaluation in the thesis. This will transform all OWL 2 axioms into axioms that more directly correspond to \SROIQ. Note that doing this is not required for starting the repair algorithms, since the axiom weakening operator implemented in the plugin has been extended to handle all OWL 2 axioms.
 
-The next two menu items are for applying two different automatic repair algorithms. For each of them, there is the option to select between making the ontology only consistent, or making it also coherent. Note that when selecting coherence as the goal, the repairs will likely be slower, also because computing coherence is more expensive, at least using the way it is implemented for the plugin. The first repair method, used with the item ``Maximal Consistent Subset'', will select some randomly sampled maximal consistent subset. The second repair method, ``Axiom Weakening'', on the other hand, uses the axiom weakening based repair algorithm. Note that for each of these algorithms, there is also a choice between ``Fast'', ``Default'', or ``Slow''. These are some presets that make different choices of how to configure the repair algorithms. As their name suggests, they mainly consider options that have an impact on the performance of the algorithm. To have greater control over these parameters, use the automatic repair view.
+The next two menu items are for applying two different automatic repair algorithms. For each of them, there is the option to select between making the ontology only consistent or making it also coherent. Note that when selecting coherence as the goal, the repairs will likely be slower, also because computing coherence is more expensive, at least using the way it is implemented for the plugin. The first repair method, used with the item ``Maximal Consistent Subset'', will select some randomly sampled maximal consistent subset. The second repair method, ``Axiom Weakening'', on the other hand, uses the axiom weakening based repair algorithm. Note that for each of these algorithms, there is also a choice between ``Fast'', ``Default'', or ``Slow''. These are some presets that make different choices of how to configure the repair algorithms. As their name suggests, they mainly consider options that have an impact on the performance of the algorithm. To have greater control over these parameters, use the automatic repair view.
 
 \section{Using the Automatic Repair View}
 
@@ -33,7 +33,7 @@ The next two menu items are for applying two different automatic repair algorith
   \caption{The automatic repair view added to Protégé. Showing the selection of possible algorithms.}
 \end{figure}
 
-The automatic repair view can be accessed in ``Window'' > ``Views'' > ``Ontology views'' > ``Automatic Repair''. It allows the user to select between a number of different repair algorithms. The one using axioms weakening and the one using a maximal consistent subset are the same as the ones accessible through the menu. The repair by removal is similar to the axiom weakening based repair, but the axioms are always removed instead of being weakened. The remaining three algorithms are all trying to optimize the IIC of the resulting repairs. For ``'best' Maximal Consistent Subset'' and ``best' of k Weakening'' this is done by sampling repairs using, respectively, maximal consistent subsets or axiom weakening, and then selecting from those the one that has the largest inferred call hierarchy. The algorithm used when selection ``'best' via Weakening Tree Search'', on the other hand, uses a Monte-Carlo tree search based approach to find the ontology with the largest inferred class hierarchy. Note that these last three repairs are significantly slower, both because they need to compute multiple repairs, and because they have to compute the inferred class hierarchy for each of them.
+The automatic repair view can be accessed in ``Window'' > ``Views'' > ``Ontology views'' > ``Automatic Repair''. It allows the user to select between a number of different repair algorithms. The one using axioms weakening and the one using a maximal consistent subset are the same as the ones accessible through the menu. The repair by removal is similar to the axiom weakening based repair, but the axioms are always removed instead of being weakened. The remaining three algorithms are all trying to optimize the IIC of the resulting repairs. For ``'best' Maximal Consistent Subset'' and ``best' of k Weakening'' this is done by sampling repairs using, respectively, maximal consistent subsets or axiom weakening, and then selecting from those the one that has the largest inferred call hierarchy. The algorithm used when selecting ``'best' via Weakening Tree Search'', on the other hand, uses a Monte-Carlo tree search based approach to find the ontology with the largest inferred class hierarchy. Note that these last three repairs are significantly slower, both because they need to compute multiple repairs, and because they have to compute the inferred class hierarchy for each of them.
 
 \begin{figure}[htbp]
   \centering
@@ -42,9 +42,9 @@ The automatic repair view can be accessed in ``Window'' > ``Views'' > ``Ontology
   \label{fig:protege-guide-config}
 \end{figure}
 
-For each of these repair algorithms, a number of different configuration option are made available to the user. \Cref{fig:protege-guide-config} shows the parameters that may be configured for the axiom weakening based repair algorithm. This includes different approaches for selecting reference ontologies and bad axioms. There are some options that allow using stricter checks, such as only allowing negation normal form, or only \ALC axioms and concepts. Further, there are some parameters that simplify the refinement of roles and one that chooses to not modify the axioms of the reference ontology.
+For each of these repair algorithms, a number of different configuration options are made available to the user. \Cref{fig:protege-guide-config} shows the parameters that may be configured for the axiom weakening based repair algorithm. This includes different approaches for selecting reference ontologies and bad axioms. There are some options that allow using stricter checks, such as only allowing negation normal form, or only \ALC axioms and concepts. Further, some parameters simplify the refinement of roles and one that chooses to not modify the axioms of the reference ontology.
 
-To start the repair, use the ``Repair'' button at the bottom of the view. Some information about the running repair will be printed to the text output. While the repair is running, it can be interrupted by using the ``Cancel'' button that will become enabled whenever a repair is running. If a repair is cancelled, no change will be made to the ontology in Protégé. As soon as the repair completes, on the other hand, the changes will be applied to the active ontology.
+To start the repair, use the ``Repair'' button at the bottom of the view. Some information about the running repair will be printed on the text output. While the repair is running, it can be interrupted by using the ``Cancel'' button that will become enabled whenever a repair is running. If a repair is cancelled, no change will be made to the ontology in Protégé. As soon as the repair completes, on the other hand, the changes will be applied to the active ontology.
 
 \section{Using the Manual Weakening View}
 
